--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 
 <body>
-    <a-scene loading-screen="dotsColor: red; backgroundColor: black" background="color: #FAFAFA">
+    <a-scene loading-screen="dotsColor: red; backgroundColor: black">
         <a-assets>
             <img id="room0" src="./images/0.JPG">
             <img id="room1" src="./images/1.JPG">
